--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" type="image/x-icon" href="images/icon.ico" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
@@ -60,21 +61,21 @@
 								<section class="box style1">
 									<span class="icon featured fa-mobile"></span>
 									<h3>iOS 앱 개발</h3>
-									<p>아이폰/아이패드/아이팟 <br>등에서 사용할 수 있는 <br><strong>iOS용 애플리케이션</strong>을 제작합니다.</p>
+									<p>아이폰/아이패드/아이팟 <br>등에서 사용할 수 있는 <br><strong>iOS용 애플리케이션</strong>을 <strong>제작</strong>합니다.</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
 									<span class="icon featured fa-users"></span>
 									<h3>컴퓨터 교육</h3>
-									<p>컴퓨터 교육을 전공했고, <br><strong>iOS 앱 제작</strong> 및 <strong>프로그래밍</strong> <br>교육을 합니다.</p>
+									<p>컴퓨터 교육을 전공했고, <br><strong>iOS 앱 / 프로그래밍</strong> <br><strong>교육</strong>을 합니다.</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
 									<span class="icon featured fa-pencil"></span>
 									<h3>집필</h3>
-									<p>프로그래밍 관련 <br><strong><a href="http://blog.yagom.net" target="_blank">블로그</a></strong> 운영 및 <br><strong>관련 서적</strong>을 집필합니다.</p>
+									<p>프로그래밍 관련 <br><strong><a href="http://blog.yagom.net" target="_blank">블로그</a></strong> 운영 및 <br><strong>관련 서적</strong>을 <strong>집필</strong>합니다.</p>
 								</section>
 							</div>
 						</div>
