add youtube channel link

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
 									<li><a href="https://facebook.com/yagomsoft" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="mailto:me@yagom.net" class="icon fa-envelope"><span class="label">Email</span></a></li>
 									<li><a href="http://blog.yagom.net" target="_blank" class="icon fa-pencil"><span class="label">Blog</span></a></li>
+									<li><a href="https://youtube.com/c/yagom" class="icon fa-youtube"><span class="label">YouTube</span></a></li>
 									<!-- <li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li> -->
 									<!-- <li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li> -->
 									<!-- <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li> -->
@@ -250,7 +251,6 @@
 									<li><a href="#" class="icon fa-foursquare"><span>Foursquare</span></a></li>
 									<li><a href="#" class="icon fa-skype"><span>Skype</span></a></li>
 									<li><a href="#" class="icon fa-soundcloud"><span>Soundcloud</span></a></li>
-									<li><a href="#" class="icon fa-youtube"><span>YouTube</span></a></li>
 									<li><a href="#" class="icon fa-blogger"><span>Blogger</span></a></li>
 									<li><a href="#" class="icon fa-flickr"><span>Flickr</span></a></li>
 									<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
