--- a/index.html
+++ b/index.html
@@ -158,12 +158,11 @@
 										<li>만들면서 배우는 Swift</li>
 										<li>스위프트 프로그래밍 - 한빛미디어</li></a>
 										<li>온라인 강의</li>
-										<a herf="https://www.inflearn.com/?s=%EC%95%BC%EA%B3%B0&post_type=course" target="_blank">
-										<li>온라인 강의</li>
+										<a href="https://www.inflearn.com/?s=%EC%95%BC%EA%B3%B0&post_type=course" target="_blank">
 										<li class="indent">야곰의 iOS 프로그래밍</li>
 										<li class="indent">야곰의 스위프트 기본 문법 강좌</li></a>
-										<a herf="http://www.edwith.org/boostcourse-ios" target="_blank">
-										<li class="indent">부스트코 - iOS Developer</li></a>
+										<a href="http://www.edwith.org/boostcourse-ios" target="_blank">
+										<li class="indent">부스트코스- iOS Developer</li></a>
 									</ul>
 								</article>
 							</div>
