update edu section

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 										<li>네이버 커넥트 재단 튜터</li>
 										<li class="indent">iOS Boostcamp 강의/튜터</li>
 										<li>대학교육</li>
+										<li class="indent">서울여자대학교</li>
 										<li class="indent">중앙대학교</li>
 										<li class="indent">한국교원대학교</li>
 										<li>특강/기업강의</li>
@@ -150,7 +151,7 @@
 									<ul>
 										<li>블로그</li>
 										<li class="indent"><a href="http://blog.yagom.net" target="_blank">yagom's blog</a></li>
-										<a href="http://m.hanbit.co.kr/search/search_list.html?frm_keyword_str=%EC%95%BC%EA%B3%B0" target="_blank">
+										<a href="http://hanbit.co.kr/search/search_list.html?frm_keyword_str=%EC%95%BC%EA%B3%B0" target="_blank">
 										<li>iOS 핵심노트 시리즈</li>
 										<li class="indent">iOS 7 핵심 노트 - 한빛미디어</li>
 										<li class="indent">iOS 8 핵심 노트 - 한빛미디어</li>
