--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
 									<ul>
 										<li>네이버 커넥트 재단 튜터</li>
 										<li class="indent">iOS Boostcamp 강의/튜터</li>
+										<a href="http://www.edwith.org/boostcourse-ios" target="_blank">
+										<li class="indent">부스트코스 iOS과정 설계/제작</li></a>
 										<li>대학교육</li>
 										<li class="indent">서울여자대학교</li>
 										<li class="indent">중앙대학교</li>
