--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 										<a href="http://www.edwith.org/boostcourse-ios" target="_blank">
 										<li class="indent">부스트코스 iOS과정 설계/제작</li></a>
 										<li>대학교육</li>
+										<li class="indent">고려대학교</li>
 										<li class="indent">서울여자대학교</li>
 										<li class="indent">중앙대학교</li>
 										<li class="indent">한국교원대학교</li>
