--- a/index.html
+++ b/index.html
@@ -126,7 +126,11 @@
 										<li>네이버 커넥트 재단 튜터</li>
 										<li class="indent">iOS Boostcamp 강의/튜터</li>
 										<a href="http://www.edwith.org/boostcourse-ios" target="_blank">
-										<li class="indent">부스트코스 iOS과정 설계/제작</li></a>
+										<li class="indent">[부스트코스] iOS과정 설계/제작</li></a>
+										<a href="https://www.edwith.org/boostcourse-cs-050/joinLectures/41485" target="_blank">
+										<li class="indent">[부스트코스] 모두를 위한 컴퓨터 과학 멘토</li></a>
+										<li>이노베이션 아카데미</li>
+										<li class="indent">Dev. 멘토</li>
 										<li>대학교육</li>
 										<li class="indent">고려대학교</li>
 										<li class="indent">서울여자대학교</li>
@@ -138,6 +142,8 @@
 										<li class="indent">세컨드플랜</li>
 										<li class="indent">포잉</li>
 										<li class="indent">도루코</li>
+										<li>(전) 코드스쿼드 모바일 클래스 마스터</li>
+										<li class="indent">iOS 프로그래밍 교육</li>
 										<li>(전) 패스트캠퍼스 iOS 강사</li>
 										<li class="indent">Programming School</li>
 										<li class="indent">iOS 입문 Camp</li>
@@ -162,11 +168,13 @@
 										<li>만들면서 배우는 Swift</li>
 										<li>스위프트 프로그래밍 - 한빛미디어</li></a>
 										<li>온라인 강의</li>
-										<a href="https://www.inflearn.com/?s=%EC%95%BC%EA%B3%B0&post_type=course" target="_blank">
+										<a href="https://yagom.net/courses/%ec%99%95%ec%b4%88%eb%b3%b4%eb%a5%bc-%ec%9c%84%ed%95%9c-ios-%ec%95%b1%ea%b0%9c%eb%b0%9c/" target="_blank"><li class="indent">왕초보를 위한 iOS 앱개발</li></a>
+										<a href="https://www.inflearn.com/courses?s=%EC%95%BC%EA%B3%B0" target="_blank">
 										<li class="indent">야곰의 iOS 프로그래밍</li>
 										<li class="indent">야곰의 스위프트 기본 문법 강좌</li></a>
 										<a href="http://www.edwith.org/boostcourse-ios" target="_blank">
 										<li class="indent">부스트코스- iOS Developer</li></a>
+										<li><a href="https://youtube.com/c/yagom" target="_blank">유튜브 채널</a></li>
 									</ul>
 								</article>
 							</div>
