--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 									<h3><a href="#">프로그래머</a></h3>
 									<p>프로그래머 및 개발자 경력</p>
 									<ul>
-										<li>(현) 프리랜서</li>
+										<li>(전) 프리랜서</li>
 										<li class="indent">원데이원송, 주머니, 바로택배 등 <br>다수 iOS 애플리케이션 개발 및 유지보수</li>
 										<li>(전) 이음소시어스 개발팀</li>
 										<li class="indent">iOS용 이음 앱 유지보수</li>
@@ -123,7 +123,8 @@
 									<h3><a href="#">컴퓨터 교육</a></h3>
 									<p>컴퓨터 및 프로그래밍 관련 교육 경력</p>
 									<ul>
-                                        <li><a href="https://www.yagom-academy.kr" target="_blank">야곰 아카데미 리더</a></li>
+                                        <li>주식회사 야곰 대표</li>
+                                        <li class="indent"><a href="https://www.yagom-academy.kr" target="_blank">야곰 아카데미 리더</a></li>
 										<li>네이버 커넥트 재단 튜터</li>
 										<li class="indent">iOS Boostcamp 강의/튜터</li>
 										<a href="http://www.edwith.org/boostcourse-ios" target="_blank">
