--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 									<h3><a href="#">컴퓨터 교육</a></h3>
 									<p>컴퓨터 및 프로그래밍 관련 교육 경력</p>
 									<ul>
+					<li>한국교원대학교 컴퓨터교육 전공</li>
                                         <li>주식회사 야곰 대표</li>
                                         <li class="indent"><a href="https://www.yagom-academy.kr" target="_blank">야곰 아카데미 리더</a></li>
 										<li>네이버 커넥트 재단 튜터</li>
